# rs

./: .cspell.jsonc  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  platform.yml  rust.yml
bench/: simple.rs
scripts/: check-all.sh  check.sh  cov-all.sh  cov.sh  test-all.sh  test-wasm.sh  test.sh
src/: chacha20poly1305.rs  compat.rs  config.rs  consts.rs  lib.rs  openssl_aes.rs  pure_aes.rs  sync.rs  types.rs  utils.rs  xchacha20poly1305.rs
src/elliptic/: ed25519.rs  mod.rs  secp256k1.rs  x25519.rs
src/symmetric/: aead.rs  hash.rs  mod.rs  openssl_aes.rs  pure_aes.rs  xchacha20.rs
tests/: integration.rs
